Use conventional name for method returning a copy
Addreses: https://gitlab.com/sosy-lab/software/cpachecker/-/merge_requests/497#note_3582833814